recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value spirale
	spirale(steps-1,angle,length+increment,increment)
        ^